- diskdrake:
  o better fix for fail to read too corrupted partition table
- stage2:
  o revert changes made in 16.70 for a better fix to mga#13894

Version 16.74 - 27 March 2015

- diskdrake (GPT):
  o fix retrieving ntfs partitions as ntfs-3g instead of ntfs
  o really fix retrieving swap partition type

Version 16.73 - 27 March 2015

- diskdrake (GPT):
  o fix creating RAID devices (mga#15400)
  o fix "I cannot read the partition table of device XXX, it is too corrupted"
  o fix retrieving LVM/RAID/swap partition type
  o fix tagging lvm/raid as "linux filesystem"
  o fix tagging ntfs-3g as "linux filesystem"
  o fix tagging swap as "linux filesystem"

Version 16.71 - 25 March 2015

- diskdrake:
  o fix retrieving ESP partition type on GPT (mga#15366)
  o log which GPT partition we fail to add/del
  o set proper GUID to ESP partitions with GPT layout
- bump max_nb() to 131 to cover mdadm managed imsm and ddf1 bios
  fakeraids (containers defaults to >= 127 and partitions <=126)

Version 16.70 - 21 March 2015

- better fix for the scrollbar in the package installation details
  window (Martin Whitaker, mga#13894)

Version 16.69 - 20 March 2015

- efi partitioning fixes from tv
- diskdrake & package install gtk fixes from Martin Whitaker

Version 16.68 - 17 March 2015

- drakboot:
  o log mkinitrd faillures (mga#9201)
- fix mis-detecting some mobile broadband modems (mga#12492)

Version 16.66 - 5 March 2015

- diskdrake:
  o add "nofail" option to "foreign" mountpoints to avoid unwanted recovery mode (#10179)

Version 16.63 - 27 February 2015

- diskdrake:
  o fix too wide buttons (mga#12422, mga#13471, mga#14839, mga#15379)
- increase default linux raid chunk size from 64 to 512KB

Version 16.62 - 19 February 2015

- diskdrake (mga#12422, mga#11988, mga#14839, mga#15272, mga#15264):
  o use an horizontal scrolling bar when needed
  o workaround too wide togglebuttons with empty label with gtk+3 and/or Adwaita
- library (for draklive-install):