@@ -1,5 +1,6 @@
 - partitionning:
   o better fix for fail to read too corrupted partition table
+  o try to detect recovery partitions on GPT
 
 Version 16.74 - 27 March 2015
 
