@@ -1,5 +1,6 @@
 - diskdrake:
   o better fix for fail to read too corrupted partition table
+  o try to detect recovery partitions on GPT
 - stage2:
   o revert changes made in 16.70 for a better fix to mga#13894
 
